--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>22</title>
+        <!-- 引入echarts -->
+        <script src="./vender/echarts.js"></script>
+        <script src="./vender/jquery-3.1.0.min.js"></script>
 
         <link rel="stylesheet" href="./css/base.css">
         <link rel="stylesheet" href="./css/app.css">
@@ -20,5 +23,9 @@
                 </div>
             </div>
         </div>
+
+        <script type="text/javascript">
+            
+        </script>
     </body>
 </html>
