--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
         <script src="./vender/echarts.js"></script>
         <script src="./vender/jquery-3.1.0.min.js"></script>
 
+        <script src="./js/email.js">
+
+        </script>
         <link rel="stylesheet" href="./css/base.css">
         <link rel="stylesheet" href="./css/app.css">
         <link rel="stylesheet" href="./css/common.css">
@@ -17,6 +20,9 @@
             <div class="zc-main zc-clear">
                 <div class="zc-main-flex">
                     111
+                    <div id="js-main" style="width: 100%;height: 100%;">
+
+                    </div>
                 </div>
                 <div class="zc-main-flex">
                     222
@@ -25,7 +31,104 @@
         </div>
 
         <script type="text/javascript">
-            
+            // var chart = echarts.init(dom, 'light');
+            var chart1 = echarts.init(document.getElementById('js-main','light'));
+            var option = {
+                 // color: ['#ffffff','#09aeb0'],
+
+                title: {
+                    text: '112'
+                },
+                tooltip: {},
+                legend: {
+                    data: ['访问来源']
+                },
+                // xAxis: {
+                //     data: ['1','2','3','a','v']
+                // },
+                // yAxis: {
+
+                // },
+                // series: [{
+                //     name: 'xl1',
+                //     type: 'bar',
+                //     data: [5,20,10,20,22]
+                // }]
+                 series : [
+                    {
+                        name: '访问来源',
+                        type: 'pie',
+                        radius: '55%',
+                        roseType: 'angle',
+                        data:[
+                            {value:235, name:'视频广告'},
+                            {value:274, name:'联盟广告'},
+                            {value:310, name:'邮件营销'},
+                            {value:335, name:'直接访问'},
+                            {value:400, name:'搜索引擎'}
+                        ],
+                        lineStyle: {
+                            color: ['red']
+                        },
+                        //hover
+                        emphasis: {
+                            itemStyle: {
+                                // 高亮时点的颜色。
+                                color: 'blue'
+                            },
+                            label: {
+                                show: true,
+                                // 高亮时标签的文字。
+                                formatter: 'This is a emphasis label.'
+                            }
+                        },
+                        itemStyle: {
+                            // color: ['red'],
+                            // 阴影的大小
+                            shadowBlur: 200,
+                            // 阴影水平方向上的偏移
+                            shadowOffsetX: 0,
+                            // 阴影垂直方向上的偏移
+                            shadowOffsetY: 0,
+                            // 阴影颜色
+                            shadowColor: 'rgba(0, 0, 0, 0.5)'
+                        }
+                    }
+                ]
+            };
+            var option2 = {
+                 title: {
+                    text: '新'
+                },
+                tooltip: {},
+                legend: {
+                    data: ['xl']
+                },
+                xAxis: {
+                    data: ['1','2','3','a','v']
+                },
+                yAxis: {
+
+                },
+                series: [{
+                    name: 'xl',
+                    type: 'bar',
+                    data: [5,20,10,20,22]
+                },{
+                    name: 'xl2',
+                    type: 'bar',
+                    data: [5,20,10,20,22]
+                },{
+                    name: 'xl3',
+                    type: 'bar',
+                    data: [5,20,10,20,22]
+                }]
+            }
+            chart1.setOption(option);
+            setTimeout(function(){
+                chart1.setOption(option2);
+            },2000)
+
         </script>
     </body>
 </html>
