--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,9 @@
             </div>
         </div>
 
+        <script type="text/javascript" src="../dest/js/app.js">
+
+        </script>
         <script type="text/javascript">
             // var chart = echarts.init(dom, 'light');
             var chart1 = echarts.init(document.getElementById('js-main','light'));
