--- a/src/index.html
+++ b/src/index.html
@@ -32,12 +32,27 @@
                             </li>
                         </ul>
                     </div>
-                    <div id="js-main" style="width: 100%;height: 100%;">
+                    <div class="zc-main-flex-chart" style="width: 100%;height: 100%;">
 
                     </div>
                 </div>
                 <div class="zc-main-flex">
-                    222
+                    <div class="zc-main-flex-menu">
+                        <ul class="zc-main-flex-menu-list zc-clear">
+                            <li class="zc-main-flex-menu-list-li">
+                                <a href="#">a</a>
+                            </li>
+                            <li class="zc-main-flex-menu-list-li">
+                                <a href="#">b</a>
+                            </li>
+                            <li class="zc-main-flex-menu-list-li">
+                                <a href="#">c</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="zc-main-flex-chart" style="width: 100%;height: 100%;">
+
+                    </div>
                 </div>
             </div>
         </div>
@@ -46,103 +61,103 @@
 
         </script>
         <script type="text/javascript">
-            // var chart = echarts.init(dom, 'light');
-            var chart1 = echarts.init(document.getElementById('js-main','light'));
-            var option = {
-                 // color: ['#ffffff','#09aeb0'],
+            // // var chart = echarts.init(dom, 'light');
+            // var chart1 = echarts.init(document.getElementById('js-main','light'));
+            // var option = {
+            //      // color: ['#ffffff','#09aeb0'],
 
-                title: {
-                    text: '112'
-                },
-                tooltip: {},
-                legend: {
-                    data: ['访问来源']
-                },
-                // xAxis: {
-                //     data: ['1','2','3','a','v']
-                // },
-                // yAxis: {
+            //     title: {
+            //         text: '112'
+            //     },
+            //     tooltip: {},
+            //     legend: {
+            //         data: ['访问来源']
+            //     },
+            //     // xAxis: {
+            //     //     data: ['1','2','3','a','v']
+            //     // },
+            //     // yAxis: {
 
-                // },
-                // series: [{
-                //     name: 'xl1',
-                //     type: 'bar',
-                //     data: [5,20,10,20,22]
-                // }]
-                 series : [
-                    {
-                        name: '访问来源',
-                        type: 'pie',
-                        radius: '55%',
-                        roseType: 'angle',
-                        data:[
-                            {value:235, name:'视频广告'},
-                            {value:274, name:'联盟广告'},
-                            {value:310, name:'邮件营销'},
-                            {value:335, name:'直接访问'},
-                            {value:400, name:'搜索引擎'}
-                        ],
-                        lineStyle: {
-                            color: ['red']
-                        },
-                        //hover
-                        emphasis: {
-                            itemStyle: {
-                                // 高亮时点的颜色。
-                                color: 'blue'
-                            },
-                            label: {
-                                show: true,
-                                // 高亮时标签的文字。
-                                formatter: 'This is a emphasis label.'
-                            }
-                        },
-                        itemStyle: {
-                            // color: ['red'],
-                            // 阴影的大小
-                            shadowBlur: 200,
-                            // 阴影水平方向上的偏移
-                            shadowOffsetX: 0,
-                            // 阴影垂直方向上的偏移
-                            shadowOffsetY: 0,
-                            // 阴影颜色
-                            shadowColor: 'rgba(0, 0, 0, 0.5)'
-                        }
-                    }
-                ]
-            };
-            var option2 = {
-                 title: {
-                    text: '新'
-                },
-                tooltip: {},
-                legend: {
-                    data: ['xl']
-                },
-                xAxis: {
-                    data: ['1','2','3','a','v']
-                },
-                yAxis: {
+            //     // },
+            //     // series: [{
+            //     //     name: 'xl1',
+            //     //     type: 'bar',
+            //     //     data: [5,20,10,20,22]
+            //     // }]
+            //      series : [
+            //         {
+            //             name: '访问来源',
+            //             type: 'pie',
+            //             radius: '55%',
+            //             roseType: 'angle',
+            //             data:[
+            //                 {value:235, name:'视频广告'},
+            //                 {value:274, name:'联盟广告'},
+            //                 {value:310, name:'邮件营销'},
+            //                 {value:335, name:'直接访问'},
+            //                 {value:400, name:'搜索引擎'}
+            //             ],
+            //             lineStyle: {
+            //                 color: ['red']
+            //             },
+            //             //hover
+            //             emphasis: {
+            //                 itemStyle: {
+            //                     // 高亮时点的颜色。
+            //                     color: 'blue'
+            //                 },
+            //                 label: {
+            //                     show: true,
+            //                     // 高亮时标签的文字。
+            //                     formatter: 'This is a emphasis label.'
+            //                 }
+            //             },
+            //             itemStyle: {
+            //                 // color: ['red'],
+            //                 // 阴影的大小
+            //                 shadowBlur: 200,
+            //                 // 阴影水平方向上的偏移
+            //                 shadowOffsetX: 0,
+            //                 // 阴影垂直方向上的偏移
+            //                 shadowOffsetY: 0,
+            //                 // 阴影颜色
+            //                 shadowColor: 'rgba(0, 0, 0, 0.5)'
+            //             }
+            //         }
+            //     ]
+            // };
+            // var option2 = {
+            //      title: {
+            //         text: '新'
+            //     },
+            //     tooltip: {},
+            //     legend: {
+            //         data: ['xl']
+            //     },
+            //     xAxis: {
+            //         data: ['1','2','3','a','v']
+            //     },
+            //     yAxis: {
 
-                },
-                series: [{
-                    name: 'xl',
-                    type: 'bar',
-                    data: [5,20,10,20,22]
-                },{
-                    name: 'xl2',
-                    type: 'bar',
-                    data: [5,20,10,20,22]
-                },{
-                    name: 'xl3',
-                    type: 'bar',
-                    data: [5,20,10,20,22]
-                }]
-            }
-            chart1.setOption(option);
-            setTimeout(function(){
-                chart1.setOption(option2);
-            },2000)
+            //     },
+            //     series: [{
+            //         name: 'xl',
+            //         type: 'bar',
+            //         data: [5,20,10,20,22]
+            //     },{
+            //         name: 'xl2',
+            //         type: 'bar',
+            //         data: [5,20,10,20,22]
+            //     },{
+            //         name: 'xl3',
+            //         type: 'bar',
+            //         data: [5,20,10,20,22]
+            //     }]
+            // }
+            // chart1.setOption(option);
+            // setTimeout(function(){
+            //     chart1.setOption(option2);
+            // },2000)
 
         </script>
     </body>
