--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         <!-- 引入echarts -->
         <script src="./vender/echarts.js"></script>
         <script src="./vender/jquery-3.1.0.min.js"></script>
-
+        <script src="./vender/mustache.js"></script>
         <script src="./js/email.js">
 
         </script>
